--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
@@ -37,7 +37,7 @@
         <div class="inline fields">
           <div class="three wide field"></div>
           <div class="two wide field">
-            <label>สำนักงานสรรพสามิตสาขา</label>
+            <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
           </div>
           <div class="seven wide field">
             <select class="ui dropdown ai search selection" style="width: 100%;" id="travelTo3" (change)="setTravelTo($event)">
