--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-9/int01-9-1/int01-9-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-9/int01-9-1/int01-9-1.component.html
@@ -11,7 +11,7 @@
           <div class="inline fields">
             <div class="two wide field"></div>
             <div class="two wide field">
-              <label>สรรพสามิตภาค</label>
+              <label>สำนักงานสรรพสามิตภาค</label>
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
@@ -20,7 +20,7 @@
               </select>
             </div>
             <div class="two wide field">
-              <label>สรรพสามิตพื้นที่</label>
+              <label>สำนักงานสรรพสามิตพื้นที่</label>
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
@@ -32,7 +32,7 @@
           <div class="inline fields">
             <div class="two wide field"></div>
             <div class="two wide field">
-              <label>สรรพสามิตสาขา</label>
+              <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
