--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1.component.html
@@ -12,7 +12,7 @@
                             <div class="ui form">
                                 <div class="inline aligned center fields">
                                     <div class="six wide centered field">
-                                        <label class="text-right full-width">สรรพสามิตภาค: </label>
+                                        <label class="text-right full-width">สำนักงานสรรพสามิตภาค: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
@@ -24,7 +24,7 @@
                                         </div>
                                     </div>
                                     <div class="six wide centered field">
-                                        <label class="text-right full-width">สรรพสามิตพื้นที่: </label>
+                                        <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="inline aligned center fields">
                                     <div class="six wide centered field">
-                                        <label class="text-right full-width">สรรพสามิตพื้นที่สาขา: </label>
+                                        <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
