--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-2/int02-m5-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-2/int02-m5-2.component.html
@@ -11,7 +11,7 @@
                             <div class="ui form">
                                 <div class="inline aligned center fields">
                                     <div class="six wide centered field">
-                                        <label>สรรพสามิตภาค: </label>
+                                        <label>สำนักงานสรรพสามิตภาค: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
@@ -19,7 +19,7 @@
                                         </div>
                                     </div>
                                     <div class="six wide centered field">
-                                        <label>สรรพสามิตพื้นที่: </label>
+                                        <label>สำนักงานสรรพสามิตพื้นที่: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="inline aligned center fields">
                                     <div class="six wide centered field">
-                                        <label>สรรพสามิตพื้นที่สาขา: </label>
+                                        <label>สำนักงานสรรพสามิตพื้นที่สาขา: </label>
                                     </div>
                                     <div class="ten centered wide field">
                                         <div class="ui input">
