--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4-admin/int05-4-admin.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4-admin/int05-4-admin.component.html
@@ -14,7 +14,7 @@
                     </div>
 
                     <div class="six wide field ">
-                        <label class="custom-label-w-20">สรรพสามิตภาค</label>
+                        <label class="custom-label-w-20">สำนักงานสรรพสามิตภาค</label>
                         <select class="ui search dropdown ai search" style="width: 100% !important">
                         <option value=""></option>
                         <option value="angular">Angular</option>
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="six wide field">
-                        <label class="custom-label-w-20">สรรพสามิตพื้นที่</label>
+                        <label class="custom-label-w-20">สำนักงานสรรพสามิตพื้นที่</label>
                         <select class="ui search dropdown ai search" style="width: 100% !important">
                         <option value=""></option>
                         <option value="angular">Angular</option>
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="six wide field ">
-                        <label class="custom-label-w-20">สรรพสามิตพื้นที่สาขา</label>
+                        <label class="custom-label-w-20">สำนักงานสรรพสามิตพื้นที่สาขา</label>
                         <select class="ui search dropdown ai search" style="width: 100% !important">
                         <option value=""></option>
                         <option value="angular">Angular</option>
