--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-9/int08-3-9.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-9/int08-3-9.component.html
@@ -100,7 +100,7 @@
           <label class="text-right full-width">สำนักงานสรรพสามิตภาค</label>
         </div>
         <div class="four wide field ">
-          <!-- <input type="text" placeholder="สรรพสามิตภาค" class="custom" name="exciseSetor" id="exciseSetor" [(ngModel)]="exciseSetor"> -->
+          <!-- <input type="text" placeholder="สำนักงานสรรพสามิตภาค" class="custom" name="exciseSetor" id="exciseSetor" [(ngModel)]="exciseSetor"> -->
           <select class="ui search dropdown" id="exciseSetor" [(ngModel)]="exciseSetor" (change)="sectorChange()">
             <option *ngFor="let sector of exciseSetorList; index as i;" value="{{sector.lovId}}">{{sector.value3}}</option>
           </select>
@@ -109,7 +109,7 @@
           <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่</label>
         </div>
         <div class="four wide field ">
-          <!-- <input type="text" placeholder="สรรพสามิตพื้นที่" class="custom" name="exciseArea" id="exciseArea" [(ngModel)]="exciseArea"> -->
+          <!-- <input type="text" placeholder="สำนักงานสรรพสามิตพื้นที่" class="custom" name="exciseArea" id="exciseArea" [(ngModel)]="exciseArea"> -->
           <select class="ui search dropdown" id="exciseArea" [(ngModel)]="exciseArea" (change)="areaChange()">
             <option *ngFor="let area of exciseAreaList; index as i;" value="{{area.lovId}}">{{area.subTypeDescription}}</option>
           </select>
@@ -119,10 +119,10 @@
       <div class="inline fields">
         <div class="two wide field "></div>
         <div class="two wide field">
-          <label class="text-right full-width">สำนักงานสรรพสามิตสาขา</label>
+          <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา</label>
         </div>
         <div class="four wide field ">
-          <!-- <input type="text" placeholder="สรรพสามิตสาขา" class="custom" name="exciseBranch" id="exciseBranch" [(ngModel)]="exciseBranch"> -->
+          <!-- <input type="text" placeholder="สำนักงานสรรพสามิตพื้นที่สาขา" class="custom" name="exciseBranch" id="exciseBranch" [(ngModel)]="exciseBranch"> -->
           <select class="ui search dropdown" id="exciseBranch" [(ngModel)]="exciseBranch" (change)="branchChange()">
             <option *ngFor="let branch of exciseBranchList; index as i;" value="{{branch.lovId}}">{{branch.subTypeDescription}}</option>
           </select>
