--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -474,7 +474,7 @@
       </div>
       <div class="inline fields">
         <div class="three wide field">
-          <label>สำนักงานสรรพสามิตสาขา</label>
+          <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
         </div>
         <div class="five wide field">
           <select class="ui dropdown search selection" style="width: 100%;" id="travelToHead3" (change)="setTravelToHead($event)">
