--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -139,7 +139,7 @@
     <div class="inline fields">
       <div class="two wide field"></div>
       <div class="two wide field">
-        <label>สำนักงานสรรพสามิตสาขา</label>
+        <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
       </div>
       <div class="four wide field">
         <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3" (change)="setTravelTo($event)">
@@ -278,7 +278,7 @@
       <div class="inline fields">
         <div class="two wide field"></div>
         <div class="two wide field">
-          <label>สำนักงานสรรพสามิตสาขา</label>
+          <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
         </div>
         <div class="four wide field">
           <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3Add" (change)="setTravelToAdd($event)">
