--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-9/int01-9-1/int01-9-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-9/int01-9-1/int01-9-1.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
-                <option value="">เลือก</option>
+                <option value="">กรุณาเลือก</option>
                 <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
@@ -24,7 +24,7 @@
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
-                <option value="">เลือก</option>
+                <option value="">กรุณาเลือก</option>
                 <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
@@ -36,7 +36,7 @@
             </div>
             <div class="four wide field">
               <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
-                <option value="">เลือก</option>
+                <option value="">กรุณาเลือก</option>
                 <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
