--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1.component.html
@@ -18,7 +18,7 @@
                                         <div class="ui input">
                                             <select class="ui dropdown ai selection" style="width: 100%;" id="travelTo1"
                                                 (change)="travelTo2Dropdown($event)" [(ngModel)]="code1">
-                                                <option value="00">เลือก</option>
+                                                <option value="00">กรุณาเลือก</option>
                                                 <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
                                             </select>
                                         </div>
@@ -30,7 +30,7 @@
                                         <div class="ui input">
                                             <select class="ui dropdown ai selection" style="width: 100%;" id="travelTo2"
                                                 (change)="travelTo3Dropdown($event)" [(ngModel)]="code2">
-                                                <option value="00">เลือก</option>
+                                                <option value="00">กรุณาเลือก</option>
                                                 <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
                                             </select>
                                         </div>
@@ -44,7 +44,7 @@
                                         <div class="ui input">
                                             <select class="ui dropdown ai selection" style="width: 100%;" id="travelTo3"
                                                 [(ngModel)]="code3">
-                                                <option value="00">เลือก</option>
+                                                <option value="00">กรุณาเลือก</option>
                                                 <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
                                             </select>
                                         </div>
