--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-8/int06-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-8/int06-8.component.html
@@ -70,7 +70,7 @@
                     <div class="six wide field">
                         <label class="custom-label-w-20">ประเภทค่าสาธารณูปโภค</label>
                         <select class="ui search dropdown ai search" name="publicUtilityType" id="publicUtilityType" style="width: 100% !important" ngModel>
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of publicUtilityTypeList" value="{{data}}">{{data}}</option>
                               </select>
                     </div>
