--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="four wide field">
             <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
-              <option value="">เลือก</option>
+              <option value="">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
@@ -22,7 +22,7 @@
           </div>
           <div class="four wide field">
             <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
-              <option value="">เลือก</option>
+              <option value="">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
@@ -34,7 +34,7 @@
           </div>
           <div class="four wide field">
             <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
-              <option value="">เลือก</option>
+              <option value="">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
