--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
@@ -48,7 +48,7 @@
                   <label class="text-right full-width">ประเภท</label>
                 </div>
                 <div class="four wide field ">
-                    <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
+                    <input type="text" class="custom-readonly" placeholder="ประเภท"  name="exciseType" id="exciseType">
                 </div>
                 <div class="three wide field ">
                   <label class="text-right full-width">พิกัด</label>
